完成lesson0热身和lesson2 SRK公式

--- a/lesson_02_SRK.ipynb
+++ b/lesson_02_SRK.ipynb
@@ -174,7 +174,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-28T09:44:38.849359Z",
      "start_time": "2017-09-28T09:44:38.845537Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -279,18 +280,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 分支"
+    "# 其他语法注意事项\n",
+    "\n",
+    "## 变量命名\n",
+    "python中的变量命名有一些规矩: \n",
+    "* 应当是以字母或者下划线开头的: 比如a, ABC, _A\n",
+    "* 不可以是数字开头, 如果有 1=2 就很尴尬了\n",
+    "\n",
+    "## 格式\n",
+    "python的代码格式: \n",
+    "* 如果使用 # 表示注释\n",
+    "* 使用缩进来表示代码块, 其他语言例如C语言, 是使用{}, python一定是要使用缩进, 不同的缩进表示代码的层级不同\n",
+    "下面这段代码中: \n",
+    "```python\n",
+    "def SRK(A,K,AL):\n",
+    "    P= A - 0.9*K - 2.5*AL\n",
+    "    return P\n",
+    "print(SRK(119.0,40,23))\n",
+    "```\n",
+    "return和print是两个不同的代码块. 对于有些强迫症患者, 这样写可能会更清晰\n",
+    "```python\n",
+    "def SRK(A,K,AL): #{\n",
+    "    P= A - 0.9*K - 2.5*AL\n",
+    "    return P\n",
+    "#}\n",
+    "print(SRK(119.0,40,23))\n",
+    "```\n",
+    "\n",
+    "## python2与python3\n",
+    "\n",
+    "本教程是基于python 3的, python目前有两个主流版本python 2.7和python 3.6, 这两个在语法上有细微的差别, 比如\n",
+    "* 在python 2中, print \"Hello World!\"\n",
+    "* 在python 2中, 100/7=14, \n",
+    "  * 因为整数型数据除以整数型数据还是等于整数型数据\n",
+    "  * 要想得到小数, 应当写成100.0/7\n",
+    "\n",
+    "* 在python 3中, print(\"Hello World!\")\n",
+    "* 在python 3中, 100/7=14.285714285714286\n",
+    "\n",
+    "我个人认为python 3用起来舒服一些, 至少100/7=14.285714285714286, 但还有可能有许多遗留的工具包是基于python 2的, 在安装和使用前一定要仔细看清楚. "
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "下面, 我们来做个更复杂一些的SRK-II公式: \n",
-    "\n",
-    "SRK-II公式中, A常数是根据眼轴长AL改变的: \n",
-    "当"
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
