lesson2 typo fixed

--- a/lesson_00_motivation.ipynb
+++ b/lesson_00_motivation.ipynb
@@ -171,6 +171,7 @@
     "## Jupyter环境的使用\n",
     "* 熟悉CoCalc\n",
     "* 熟悉文学式编程\n",
+    "* git初步\n",
     "\n",
     "## 计算IOL度数的SRK公式计算器\n",
     "* 理解变量赋值\n",
