--- a/lesson_01_jupyter.ipynb
+++ b/lesson_01_jupyter.ipynb
@@ -39,8 +39,17 @@
     "\n",
     "## github\n",
     "\n",
-    "## git add. "
+    "## git常用命令"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -73,7 +82,7 @@
    },
    "moveMenuLeft": true,
    "nav_menu": {
-    "height": "224px",
+    "height": "290px",
     "width": "254px"
    },
    "navigate_menu": true,
