--- a/lesson_02_SRK.ipynb
+++ b/lesson_02_SRK.ipynb
@@ -213,7 +213,7 @@
     "Python中定义函数的方法是: \n",
     "```python\n",
     "def 函数名(参数1, 参数2, 参数3, 参数4):\n",
-    "    空4个写函数体的内容\n",
+    "    空4格写函数体的内容\n",
     "    return 函数值\n",
     "```\n",
     "\n",
@@ -234,7 +234,7 @@
    "source": [
     "## 练习: \n",
     "重新定义SRK函数, 要使之能够计算两个角膜曲率K_1,K_2的情况. 其中: \n",
-    "$$ K=\\frac{ K_1+K_2}{2} \n",
+    "$$ K=\\frac{ K_1+K_2}{2} ,  \n",
     "\\\\\n",
     "P=A - 0.9 \\times K + 2.5 \\times AL\n",
     "$$"
@@ -320,15 +320,6 @@
     "\n",
     "我个人认为python 3用起来舒服一些, 至少100/7=14.285714285714286, 但还有可能有许多遗留的工具包是基于python 2的, 在安装和使用前一定要仔细看清楚. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
