忘了把第4课布置作业, 已经把作业加上了

--- a/lesson_04_1001patients.ipynb
+++ b/lesson_04_1001patients.ipynb
@@ -6,9 +6,8 @@
    "source": [
     "# 一千零一个病人\n",
     "\n",
-    "![](./img/nerdwork.png)\n",
-    "\n",
     "普通人干活往往是图中蓝色的曲线, 随着问题规模的增长, 付出的努力或者工作量也随之线性增长. Nerd, Geek这类人干活则是红色的曲线, 当他们遇到一个可能反复出现的问题时, 先要花大力气去搞出一个自动化的东西, 然后不论问题再怎么增长规模, 他们也只不过是跑跑自动化的工具, 不费什么力气. 这就是编写程序的意义所在.\n",
+    "![](./img/nerdwork.png)\n",
     "\n",
     "之前我们写了计算IOL度数的程序似乎没有什么意义. 每计算一次都还要敲上print, 再调用函数. 看起来并不必手工或者用IOL master之类的机器好多少. \n",
     "\n",
@@ -26,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T15:02:12.441967Z",
-     "start_time": "2017-10-15T15:02:12.421755Z"
+     "end_time": "2017-10-16T03:54:01.504086Z",
+     "start_time": "2017-10-16T03:54:00.672584Z"
     },
     "scrolled": true
    },
@@ -75,6 +74,8 @@
     "```\n",
     "之前已经讲解过了, 就是导入numpy这个科学计算工具包, 并且简称为np, 那么Numpy工具包里面的函数, 就用np.函数名来表示了. \n",
     "\n",
+    "如果在上面有错误, 在导入numpy时出错, ** 请确认是在coclac里使用的kernel是python3(anaconda) **\n",
+    "\n",
     "但具体应该用什么函数来实现需要的功能, numpy的函数在撰写上有什么要求, 就需要查numpy的手册了:  https://docs.scipy.org/doc/numpy/reference/\n",
     "更简单一些的, 我们可以直接去搜索去搜索, 这也是我接下来要讲的: \n",
     "\n",
@@ -114,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T13:16:39.062782Z",
-     "start_time": "2017-10-15T13:16:39.027205Z"
+     "end_time": "2017-10-16T03:55:08.605008Z",
+     "start_time": "2017-10-16T03:55:08.573007Z"
     },
     "collapsed": true
    },
@@ -159,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T16:02:32.730122Z",
-     "start_time": "2017-10-15T16:02:32.695278Z"
+     "end_time": "2017-10-16T03:55:11.253696Z",
+     "start_time": "2017-10-16T03:55:11.102940Z"
     },
     "scrolled": false
    },
@@ -175,8 +176,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-84-49cd03eadbeb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSRK_2_origin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK_1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK_2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mREF\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-42-c9621155cb1a>\u001b[0m in \u001b[0;36mSRK_2_origin\u001b[0;34m(A, K_1, K_2, L, REF)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mSRK_2_origin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK_1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK_2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mREF\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m20.0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mA1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m21.0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mA1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-49cd03eadbeb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSRK_2_origin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK_1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK_2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mREF\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-2-c9621155cb1a>\u001b[0m in \u001b[0;36mSRK_2_origin\u001b[0;34m(A, K_1, K_2, L, REF)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mSRK_2_origin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK_1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK_2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mREF\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m20.0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mA1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m21.0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mA1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
@@ -200,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T16:51:54.151744Z",
-     "start_time": "2017-10-15T16:51:54.143864Z"
+     "end_time": "2017-10-16T03:55:15.367224Z",
+     "start_time": "2017-10-16T03:55:15.357847Z"
     },
     "scrolled": false
    },
@@ -244,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:03:43.695216Z",
-     "start_time": "2017-10-15T17:03:43.689822Z"
+     "end_time": "2017-10-16T03:55:17.555564Z",
+     "start_time": "2017-10-16T03:55:17.550179Z"
     },
     "scrolled": true
    },
@@ -274,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:06:33.733378Z",
-     "start_time": "2017-10-15T17:06:33.728174Z"
+     "end_time": "2017-10-16T03:55:18.899411Z",
+     "start_time": "2017-10-16T03:55:18.892876Z"
     }
    },
    "outputs": [
@@ -315,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:29:53.917531Z",
-     "start_time": "2017-10-15T17:29:53.907957Z"
+     "end_time": "2017-10-16T03:55:20.716607Z",
+     "start_time": "2017-10-16T03:55:20.708651Z"
     }
    },
    "outputs": [
@@ -358,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:27:20.948035Z",
-     "start_time": "2017-10-15T17:27:20.943656Z"
+     "end_time": "2017-10-16T03:55:22.891452Z",
+     "start_time": "2017-10-16T03:55:22.884614Z"
     }
    },
    "outputs": [
@@ -389,11 +390,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:11:44.276345Z",
-     "start_time": "2017-10-15T17:11:44.266807Z"
+     "end_time": "2017-10-16T03:55:24.226638Z",
+     "start_time": "2017-10-16T03:55:24.221557Z"
     }
    },
    "outputs": [
@@ -421,11 +422,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:13:57.988325Z",
-     "start_time": "2017-10-15T17:13:57.983373Z"
+     "end_time": "2017-10-16T03:55:25.586444Z",
+     "start_time": "2017-10-16T03:55:25.581856Z"
     },
     "scrolled": true
    },
@@ -453,11 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:31:26.538516Z",
-     "start_time": "2017-10-15T17:31:26.532480Z"
+     "end_time": "2017-10-16T03:55:28.469618Z",
+     "start_time": "2017-10-16T03:55:28.462803Z"
     },
     "scrolled": true
    },
@@ -498,20 +499,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:37:08.110871Z",
-     "start_time": "2017-10-15T17:37:08.106132Z"
+     "end_time": "2017-10-16T03:55:37.242362Z",
+     "start_time": "2017-10-16T03:55:37.236673Z"
     },
     "scrolled": true
    },
@@ -542,11 +534,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T13:29:26.656170Z",
-     "start_time": "2017-10-15T13:29:26.651286Z"
+     "end_time": "2017-10-16T03:55:42.540487Z",
+     "start_time": "2017-10-16T03:55:42.534308Z"
     },
     "collapsed": true
    },
@@ -562,16 +554,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "有了这个函数, 再去定义SRK2公式的函数, 就可以躲开出错的if语句了"
+    "有了这个函数, 再去定义SRK2公式的函数, 就可以躲开出错的if语句了. \n",
+    "\n",
+    "# 练习\n",
+    "\n",
+    "利用on_L_change_A函数修改新的SRK_2公式函数, 使之可以满足同时处理多组数据. \n",
+    "\n",
+    "## 第一处\n",
+    "使用on_L_change_A函数, 替代if. . . elif. . . 语句, 例如\n",
+    "\n",
+    "```python\n",
+    "if L < 20.0 :\n",
+    "    A1=A+3\n",
+    "```\n",
+    "修改成了\n",
+    "```python\n",
+    "A = on_L_change_A(L,A,0,    20,    3) # 我想眼轴长L应该不至于<0, 因此用0作为下界\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "if L > 24.5 :\n",
+    "    A1=A-0.5\n",
+    "```\n",
+    "修改成了\n",
+    "```python\n",
+    "A = on_L_change_A(L,A,24.5, 50,    -0.5) # 我想眼轴长L应该不至于 > 50, 因此用50作为上届\n",
+    "```\n",
+    "\n",
+    "补充下面关于A的修正过程, 将含有None修改成合适的语句. \n",
+    "\n",
+    "## 第二处\n",
+    "```python\n",
+    "    if P_emme < 14:\n",
+    "        CR = 1.00\n",
+    "    else:\n",
+    "        CR = 1.25\n",
+    "```\n",
+    "已经首先使用    \n",
+    "```python\n",
+    "CR = np.ones(P_emme.shape)\n",
+    "```\n",
+    "将CR的默认值设定成了元素为1, 形状与P_emme相同的矩阵, \n",
+    "请将 P_emme >=14 时所对应的CR值, 修改成 = 1.25 \n",
+    "\n",
+    "你可能需要在CR[?]里面增加一些逻辑判断. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:38:54.418255Z",
-     "start_time": "2017-10-15T17:38:54.383551Z"
+     "end_time": "2017-10-16T03:55:45.844629Z",
+     "start_time": "2017-10-16T03:55:45.816377Z"
     },
     "collapsed": true
    },
@@ -579,15 +614,19 @@
    "source": [
     "def SRK_2(A,K_1,K_2,L,REF=0):\n",
     "    A = on_L_change_A(L,A,0,    20,    3)\n",
-    "    A = on_L_change_A(L,A,20,   21,    2)\n",
-    "    A = on_L_change_A(L,A,21,   22,    1)\n",
-    "    A = on_L_change_A(L,A,22,   24.5,  0)\n",
+    "    # 在此行下面修改代码, 不要改变此行之前的代码\n",
+    "    A = None\n",
+    "    A = None\n",
+    "    A = None\n",
+    "    # 在此行上面修改代码, 不要改变此行之后的代码\n",
     "    A = on_L_change_A(L,A,24.5, 50,    -0.5)\n",
     "\n",
     "    K = (K_1+K_2)/2\n",
     "    P_emme= A - 0.9*K -2.5*L\n",
     "    CR = np.ones(P_emme.shape)\n",
-    "    CR[P_emme >= 14]=1.25\n",
+    "    # 在此行下面修改代码, 不要改变此行之前的代码\n",
+    "    # CR[ ? ]=1.25\n",
+    "    # 在此行上面修改代码, 不要改变此行之后的代码\n",
     "        \n",
     "    P_ammc=P_emme-REF*CR # 注意这里的乘法\n",
     "    return P_ammc"
@@ -595,26 +634,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-15T17:38:54.914649Z",
-     "start_time": "2017-10-15T17:38:54.909018Z"
-    }
+     "end_time": "2017-10-16T03:55:46.877789Z",
+     "start_time": "2017-10-16T03:55:46.861404Z"
+    },
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 15.04981622]\n",
-      " [ 17.25996816]\n",
-      " [ 21.6124319 ]\n",
-      " [ 19.0135103 ]\n",
-      " [ 26.33189411]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(SRK_2(A,K_1,K_2,L,REF))"
    ]
@@ -625,17 +653,17 @@
     "collapsed": true
    },
    "source": [
+    "期望的答案是:\n",
+    "```\n",
+    "[[ 15.04981622]\n",
+    " [ 17.25996816]\n",
+    " [ 21.6124319 ]\n",
+    " [ 19.0135103 ]\n",
+    " [ 26.33189411]]\n",
+    "```\n",
+    "\n",
     "处理5个病人的数据, 和处理一千零一个人的数据并没有区别. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
